// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`from > from(-0.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-0.1
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be between 0 and 1, got: -0.1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be between 0 and 1, got: -1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
0
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0.001) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.001
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.001
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.5
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.5
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0.25) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.25
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.25
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0.75) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.75
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.75
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0.999) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.999
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.999
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS
1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(1.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.1
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be between 0 and 1, got: 1.1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be between 0 and 1, got: 2
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(100) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
100
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be between 0 and 1, got: 100
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is("0.5") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"0.5"
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-0.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-0.1
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0.001) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.001
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.5
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0.25) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.25
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0.75) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.75
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0.999) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.999
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(1.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.1
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(100) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
100
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-0.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-0.1
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
0
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0.001) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.001
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.001
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.5
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.5
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0.25) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.25
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.25
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0.75) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.75
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.75
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0.999) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0.999
╠══════════════════════════════════════════════════╣ THEN RETURNS
0.999
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS
1
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(1.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.1
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(100) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
100
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;
